add curriculum / links

--- a/index.html
+++ b/index.html
@@ -19,5 +19,25 @@
             </div>
         </div>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
+
+        <div class="links">
+            <ul>
+                <li>
+                    <a href="./assets/CV2024.pdf">Curriculum</a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/shimas_jp/">About Me</a>
+                </li>
+                <li>
+                    <a href="https://github.com/Shimoteg">Projects</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+
+
     </body>
 </html>
