transition and coments/html

--- a/index.html
+++ b/index.html
@@ -12,30 +12,47 @@
 
     <body>
 
+        <!-- Container principal -->
         <div id="container">
+            <!-- Seção do perfil -->
             <div id="profile">
+                <!-- Imagem do perfil -->
                 <img src="./assets/eu.jpeg" alt="Eu no perfil" class="avatar">
+                <!-- Nome de usuário -->
                 <span id="userName">@gabrielshimote </span>
             </div>
-        </div>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
+            <!-- Link para o CSS do Google -->
+            <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
-        <div class="links">
-            <ul>
-                <li>
-                    <a href="./assets/CV2024.pdf">Curriculum</a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/shimas_jp/">About Me</a>
-                </li>
-                <li>
-                    <a href="https://github.com/Shimoteg">Projects</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
+            <!-- Seção dos links -->
+
+            <div class="links">
+
+                <!-- Lista de links -->
+                <ul>
+
+                    <!-- Link para o currículo -->
+                    <li>
+                        <a href="./assets/CV2024.pdf" target="_blank">Curriculum</a>
+                    </li>
+
+                    <!-- Link para o perfil no Instagram -->
+                    <li>
+                        <a href="https://app.rocketseat.com.br/me/gabriel-shimote" target="_blank">About Me</a>
+                    </li>
+
+                    <!-- Link para os projetos no GitHub -->
+                    <li>
+                        <a href="https://github.com/Shimoteg" target="_blank">Projects</a>
+                    </li>
+
+                    <!-- Link para a conta da Advanc3dCreation no Instagram -->
+                    <li>
+                        <a href="https://www.instagram.com/advanc3dcreation/" target="_blank">Advanc3dCeation</a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
 
