--- a/index.html
+++ b/index.html
@@ -53,8 +53,19 @@
                     </li>
                 </ul>
             </div>
+
+            <div id="social-links">
+                <a href="https://www.instagram.com/shimas_jp/" target="_blank" name="instagram">
+                    <ion-icon name="logo-instagram"></ion-icon>
+                </a>
+
+                <a href="https://github.com/Shimoteg" target="_blank"><ion-icon name="logo-github">
+                    </ion-icon></a>
+
+            </div>
         </div>
 
-
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     </body>
 </html>
