light mode / fumaca image

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="light">
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <meta charset="UTF-8">
@@ -24,6 +26,7 @@
 
             <!-- Link para o CSS do Google -->
             <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
             <!-- Seção dos links -->
 
@@ -42,11 +45,6 @@
                         <a href="https://app.rocketseat.com.br/me/gabriel-shimote" target="_blank">About Me</a>
                     </li>
 
-                    <!-- Link para os projetos no GitHub -->
-                    <li>
-                        <a href="https://github.com/Shimoteg" target="_blank">Projects</a>
-                    </li>
-
                     <!-- Link para a conta da Advanc3dCreation no Instagram -->
                     <li>
                         <a href="https://www.instagram.com/advanc3dcreation/" target="_blank">Advanc3dCeation</a>
@@ -63,6 +61,11 @@
                     </ion-icon></a>
 
             </div>
+
+            <div class="dark-fumaca"></div>
+
+            <span class="text-lulu">Tenho dois lulus da pomerania!</span>
+
         </div>
 
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
