--- a/index.html
+++ b/index.html
@@ -64,7 +64,16 @@
 
             <div class="dark-fumaca"></div>
 
-            <span class="text-lulu">Tenho dois lulus da pomerania!</span>
+            <span class="text-lulu"> Faisca</span>
+
+            <div id="switch" onclick="toggleMode()">
+                <span>
+                    <button>
+
+                    </button>
+                    </span>
+
+            </div>
 
         </div>
 
