add script and adjust theme dark/light

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt-br" class="light">
+<!DOCTYPE html class="light">
+<html lang="pt-br">
     <head>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <meta charset="UTF-8">
@@ -14,8 +12,11 @@
 
     <body>
 
-        <!-- Container principal -->
+        </div>
+
         <div id="container">
+
+
             <!-- Seção do perfil -->
             <div id="profile">
                 <!-- Imagem do perfil -->
@@ -28,21 +29,19 @@
             <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
+
             <!-- Seção dos links -->
-
             <div class="links">
-
                 <!-- Lista de links -->
                 <ul>
-
                     <!-- Link para o currículo -->
                     <li>
                         <a href="./assets/CV2024.pdf" target="_blank">Curriculum</a>
-                    </li>
 
+                    </li>
                     <!-- Link para o perfil no Instagram -->
-                    <li>
-                        <a href="https://app.rocketseat.com.br/me/gabriel-shimote" target="_blank">About Me</a>
+                    <li><a href="https://app.rocketseat.com.br/me/gabriel-shimote" target="_blank">About Me</a>
+
                     </li>
 
                     <!-- Link para a conta da Advanc3dCreation no Instagram -->
@@ -64,20 +63,26 @@
 
             <div class="dark-fumaca"></div>
 
-            <span class="text-lulu"> Faisca</span>
+            <span class="text-lulu">
+
+            </span>
+
+
 
             <div id="switch" onclick="toggleMode()">
-                <span>
+                <div id="background-switch">
                     <button>
-
                     </button>
-                    </span>
+                </div>
+
+
 
             </div>
+            <script src="script.js"></script>
+            <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+            <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 
         </div>
-
-        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     </body>
 </html>
