--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <body>
 
+
         </div>
 
         <div id="container">
@@ -61,23 +62,25 @@
 
             </div>
 
-            <div class="dark-fumaca"></div>
+            <div class="dark-fumaca">
 
-            <span class="text-lulu">
-
-            </span>
+                </script>
+            </div>
 
 
 
             <div id="switch" onclick="toggleMode()">
                 <div id="background-switch">
                     <button>
+
                     </button>
                 </div>
 
 
 
             </div>
+
+
             <script src="script.js"></script>
             <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
             <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
