--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div id="container">
 
 
+
             <!-- Seção do perfil -->
             <div id="profile">
                 <!-- Imagem do perfil -->
@@ -62,12 +63,7 @@
 
             </div>
 
-            <div class="dark-fumaca">
-
-                </script>
-            </div>
-
-
+            <div class="dark-fumaca"></div>
 
             <div id="switch" onclick="toggleMode()">
                 <div id="background-switch">
@@ -75,6 +71,8 @@
 
                     </button>
                 </div>
+
+
 
 
 
